--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.41.3",
     "react-is": "18.2.0",
     "regenerator-runtime": "0.13.7",
+    "sharp": "^0.31.3",
     "superjson": "^1.12.1",
     "tslib": "^2.3.0",
     "zod": "^3.20.2"
