--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.2",
+    "@next/bundle-analyzer": "^13.1.4",
     "@next/font": "^13.1.1",
     "@nrwl/next": "15.4.2",
     "@supabase/auth-helpers-nextjs": "^0.5.2",
